# myAIbeats

./: .gitignore  ARCHITECTURE.md  CONSTITUTION.md  SPEC.md
backend/: pyproject.toml
backend/myAIbeats/: __init__.py  api.py  events.py  local.py  pipeline.py  renderers.py  spec.py  verifiers.py
backend/tests/: test_local.py  test_pipeline.py  test_spec.py  test_stitch.py  test_vocals.py
docs/: index.html
frontend/: index.html
specs/: rubber_band.json  something_blue.json
